<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.rcextract</groupId>
  <artifactId>minecord</artifactId>
  <version>Beta 12.0</version>
  <name>Minecord</name>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>9</source>
          <target>9</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
	   <id>vault-repo</id>
	   <url>http://nexus.hc.to/content/repositories/pub_releases</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
        <artifactId>spigot-api</artifactId>
        <version>1.12.2-R0.1-SNAPSHOT</version>
        <type>jar</type>
        <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.milkbowl.vault</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.6</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>